--- a/pages/home.html
+++ b/pages/home.html
@@ -64,10 +64,14 @@
         font-size: 24px;
         font-weight: bold;
       }
+      nav .logo a {
+        color: white;
+        text-decoration: none;
+      }
       nav ul {
         list-style: none;
         display: flex;
-        gap: 20px;
+        gap: 15px;
         margin: 0;
         padding: 0;
         flex-wrap: wrap;
@@ -347,8 +351,10 @@
       }
       @media (max-width: 768px) {
         nav ul {
-          gap: 10px;
-          flex-direction: column;
+          gap: 8px;
+        }
+        nav ul li a {
+          font-size: 14px;
         }
         .hero h1 {
           font-size: 36px;
@@ -379,12 +385,13 @@
   </head>
   <body>
     <nav>
-      <div class="logo">SAMK</div>
+      <div class="logo"><a href="home.html">SAMK</a></div>
       <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#events">Hackathon Info</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#recruit">Recruit</a></li>
+        <li><a href="#about" data-lang-key="about_title">소개</a></li>
+        <li><a href="#events" data-lang-key="events_title">해커톤 정보</a></li>
+        <li><a href="#team" data-lang-key="team_title">팀</a></li>
+        <li><a href="#timeline" data-lang-key="timeline_title">타임라인</a></li>
+        <li><a href="#recruit" data-lang-key="recruit_title">모집 안내</a></li>
       </ul>
       <div class="language-switcher">
         <button class="lang-btn active" data-lang="ko">한국어</button>
@@ -392,15 +399,13 @@
       </div>
     </nav>
 
-    <div class="hero">
+    <div class="hero" id="hero">
       <h1 id="typing-text" data-lang-key="hero_title"></h1>
-      <p data-lang-key="hero_subtitle">
-        Start at Mason Korea - 창업과 개발의 시작
-      </p>
+      <p data-lang-key="hero_subtitle"></p>
     </div>
 
     <div class="section" id="about">
-      <h2 data-lang-key="about_title">About</h2>
+      <h2 data-lang-key="about_title">소개</h2>
       <p data-lang-key="about_content">
         SAMK는 창업과 개발을 사랑하는 학생들이 모여 아이디어를 실현하고 함께
         성장하는 조지메이슨 글로벌캠퍼스 기반의 동아리입니다.
@@ -480,7 +485,7 @@
     </div>
 
     <div class="section" id="team">
-      <h2 data-lang-key="team_title">Team</h2>
+      <h2 data-lang-key="team_title">팀</h2>
       <p data-lang-key="team_content">
         SAMK는 다양한 팀 단위로 아이디어를 발전시키고 협업하는 과정을
         중시합니다. 각 팀은 고유한 주제와 목표를 갖고 독창적인 프로젝트를
@@ -533,9 +538,9 @@
     </div>
 
     <div class="section" id="timeline">
-      <h2 data-lang-key="timeline_title">이벤트 타임라인</h2>
+      <h2 data-lang-key="timeline_title">타임라인</h2>
       <p data-lang-key="timeline_content">
-        SAMK의 주요 이벤트를 한눈에 확인하세요。
+        SAMK의 주요 활동을 한눈에 확인하세요。
       </p>
       <div class="timeline">
         <div class="timeline-item">
@@ -651,10 +656,10 @@
         ko: {
           hero_title: "Welcome to SAMK",
           hero_subtitle: "Start at Mason Korea - 창업과 개발의 시작",
-          about_title: "About",
+          about_title: "소개",
           about_content:
             "SAMK는 창업과 개발을 사랑하는 학생들이 모여 아이디어를 실현하고 함께 성장하는 조지메이슨 글로벌캠퍼스 기반의 동아리입니다。",
-          team_title: "Team",
+          team_title: "팀",
           team_content:
             "SAMK는 다양한 팀 단위로 아이디어를 발전시키고 협업하는 과정을 중시합니다. 각 팀은 고유한 주제와 목표를 갖고 독창적인 프로젝트를 수행합니다。",
           team_dif_title: "DIF",
@@ -675,8 +680,8 @@
           events_hackathon3_title: "Snowflake & Streamlit 해커톤",
           events_hackathon3_content:
             "데이터로 아이디어를 현실로 만들고 싶다면?",
-          timeline_title: "이벤트 타임라인",
-          timeline_content: "SAMK의 주요 이벤트를 한눈에 확인하세요。",
+          timeline_title: "타임라인",
+          timeline_content: "SAMK의 주요 활동을 한눈에 확인하세요。",
           timeline_date1: "2024.10",
           timeline_event1_title: "첫 이미지 분류 해커톤",
           timeline_event1_content: "SAMK의 첫 해커톤, 데이터로 세상을 바꾸다!",
@@ -720,8 +725,8 @@
           events_hackathon3_title: "Snowflake & Streamlit Hackathon",
           events_hackathon3_content:
             "Want to turn ideas into reality with data?",
-          timeline_title: "Event Timeline",
-          timeline_content: "Explore SAMK's key events at a glance.",
+          timeline_title: "Timeline",
+          timeline_content: "Explore SAMK's key activities at a glance.",
           timeline_date1: "2024.10",
           timeline_event1_title: "First Image Classification Hackathon",
           timeline_event1_content:
@@ -743,6 +748,7 @@
       const langElements = document.querySelectorAll("[data-lang-key]");
       let currentLang = "ko";
       let typingTimeout = null;
+      let isNavigating = false;
 
       const teamData = {
         dif: {
@@ -771,7 +777,10 @@
         teamData.jun.title = translations[lang].team_jun_title;
         teamData.sydney.title = translations[lang].team_sydney_title;
         langElements.forEach((el) => {
-          const text = translations[lang][el.dataset.langKey];
+          let text = translations[lang][el.dataset.langKey];
+          if (el.dataset.langKey === "hero_subtitle" && lang === "ko") {
+            text = "Start at Mason Korea - 창업과 개발의 시작";
+          }
           if (el.id === "typing-text") {
             startTypingAnimation(text);
           } else {
@@ -837,27 +846,76 @@
       });
 
       const sections = document.querySelectorAll(".section, .hero");
-      const observer = new IntersectionObserver(
-        (entries) => {
-          entries.forEach((entry) => {
-            if (entry.isIntersecting) {
-              console.log(`Section visible: ${entry.target.id || "hero"}`);
-              sections.forEach((section) => {
-                section.classList.add("hidden");
-                section.classList.remove("visible");
-              });
-              entry.target.classList.remove("hidden");
-              entry.target.classList.add("visible");
-            }
-          });
-        },
-        {
-          threshold: 0.5,
-          rootMargin: "-5% 0px",
-        }
-      );
+      let observer;
 
-      sections.forEach((section) => observer.observe(section));
+      function setupIntersectionObserver() {
+        observer = new IntersectionObserver(
+          (entries) => {
+            if (isNavigating) return; // 네비게이션 중에는 IntersectionObserver 동작 방지
+            entries.forEach((entry) => {
+              if (entry.isIntersecting) {
+                console.log(`Section visible: ${entry.target.id || "hero"}`);
+                sections.forEach((section) => {
+                  section.classList.add("hidden");
+                  section.classList.remove("visible");
+                });
+                entry.target.classList.remove("hidden");
+                entry.target.classList.add("visible");
+              }
+            });
+          },
+          {
+            threshold: 0.5,
+            rootMargin: "-5% 0px",
+          }
+        );
+
+        sections.forEach((section) => observer.observe(section));
+      }
+
+      // 네비게이션 링크 클릭 이벤트 추가
+      const navLinks = document.querySelectorAll("nav ul li a");
+      navLinks.forEach((link) => {
+        link.addEventListener("click", (e) => {
+          e.preventDefault(); // 기본 스크롤 동작 방지
+          const targetId = link.getAttribute("href").substring(1); // #about -> about
+          const targetSection = document.getElementById(targetId);
+
+          if (targetSection) {
+            console.log(`Navigating to section: ${targetId}`);
+            isNavigating = true;
+
+            // 모든 섹션 숨김 처리 후 대상 섹션만 표시
+            sections.forEach((section) => {
+              section.classList.add("hidden");
+              section.classList.remove("visible");
+            });
+            targetSection.classList.remove("hidden");
+            targetSection.classList.add("visible");
+
+            // 부드러운 스크롤 (네비게이션 바 높이 고려)
+            const navHeight = document.querySelector("nav").offsetHeight;
+            const targetPosition =
+              targetSection.getBoundingClientRect().top +
+              window.pageYOffset -
+              navHeight;
+            window.scrollTo({
+              top: targetPosition,
+              behavior: "smooth",
+            });
+
+            // 스크롤 완료 후 isNavigating 플래그 해제
+            setTimeout(() => {
+              isNavigating = false;
+              console.log(
+                "Navigation completed, re-enabling IntersectionObserver"
+              );
+            }, 1000); // 스크롤 애니메이션 시간 고려
+          } else {
+            console.error(`Target section not found: ${targetId}`);
+          }
+        });
+      });
 
       document.addEventListener("DOMContentLoaded", () => {
         console.log("DOM fully loaded");
@@ -869,6 +927,7 @@
           } else {
             console.error("Typing text element not found");
           }
+          setupIntersectionObserver();
         } catch (error) {
           console.error("Initialization error:", error);
         }
