--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="../SAMK/assets/css/index.css" />
+    <link rel="stylesheet" href="../assets/css/index.css" />
   </head>
   <body>
     <nav>
@@ -316,6 +316,6 @@
       </div>
     </footer>
 
-    <script src="../SAMK/assets/js/index.js"></script>
+    <script src="../assets/js/index.js"></script>
   </body>
 </html>
