--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <nav>
-      <div class="logo"><a href="home.html">SAMK</a></div>
+      <div class="logo"><a href="pages/home.html">SAMK</a></div>
       <ul>
         <li><a href="#about" data-lang-key="about_title">소개</a></li>
         <li><a href="#events" data-lang-key="events_title">해커톤 정보</a></li>
@@ -73,7 +73,6 @@
       </p>
       <div class="cards">
         <div class="card">
-          <!-- 로컬 이미지 사용 시: src="../images/hackathon1.png" -->
           <img
             src="https://static.onoffmix.com/afv2/thumbnail/2025/03/04/v3246bf2ecf3eec7b93bc9ad98d402b157.png"
             alt="이미지 분류 해커톤 이미지"
@@ -96,7 +95,6 @@
           </div>
         </div>
         <div class="card">
-          <!-- 로컬 이미지 사용 시: src="../images/hackathon2.png" -->
           <img
             src="https://static.onoffmix.com/afv2/thumbnail/2025/04/01/v3165517c876673a2cdb102b7787aa24e4.png"
             alt="기업 성공 확률 예측 해커톤 이미지"
@@ -119,7 +117,6 @@
           </div>
         </div>
         <div class="card">
-          <!-- 로컬 이미지 사용 시: src="../images/hackathon3.jpg" -->
           <img
             src="https://static.onoffmix.com/afv2/thumbnail/2025/04/07/v3f8ea1286c8e2010c89b8f5b7886b9e3b.jpg"
             alt="Snowflake & Streamlit 해커톤 이미지"
@@ -153,7 +150,6 @@
       </p>
       <div class="cards">
         <div class="card" onclick="showModal('dif')">
-          <!-- 로컬 이미지 사용 시: src="../images/team_dif.jpg" -->
           <img
             src="https://images.unsplash.com/photo-1516321310764-2f51c5a64997?q=80&w=2070&auto=format&fit=crop"
             alt="DIF 팀 이미지"
@@ -168,7 +164,6 @@
           </div>
         </div>
         <div class="card" onclick="showModal('jun')">
-          <!-- 로컬 이미지 사용 시: src="../images/team_jun.jpg" -->
           <img
             src="https://images.unsplash.com/photo-1522202176988-66273c2b6a55?q=80&w=2070&auto=format&fit=crop"
             alt="Jun 팀 이미지"
@@ -183,7 +178,6 @@
           </div>
         </div>
         <div class="card" onclick="showModal('sydney')">
-          <!-- 로컬 이미지 사용 시: src="../images/team_sydney.jpg" -->
           <img
             src="https://images.unsplash.com/photo-1531482615713-2afd690bf4ae?q=80&w=2070&auto=format&fit=crop"
             alt="Sydney 팀 이미지"
