--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <meta
       http-equiv="Cache-Control"
       content="no-cache, no-store, must-revalidate"
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <title>SAMK - Start at Mason Korea</title>
     <meta
       name="description"
@@ -39,23 +47,35 @@
   </head>
   <body>
     <nav>
-      <div class="logo"><a href="pages/home.html">SAMK</a></div>
-      <ul>
+      <div class="logo"><a href="index.html">SAMK</a></div>
+      <div class="language-switcher">
+        <div class="language-icon">
+          <i class="fas fa-globe"></i>
+        </div>
+        <div class="language-dropdown">
+          <button class="lang-btn" data-lang="ko">한국어</button>
+          <button class="lang-btn" data-lang="en">English</button>
+        </div>
+      </div>
+      <div class="hamburger">
+        <i class="fas fa-bars"></i>
+      </div>
+      <ul class="nav-links">
         <li><a href="#about" data-lang-key="about_title">소개</a></li>
         <li><a href="#events" data-lang-key="events_title">해커톤 정보</a></li>
         <li><a href="#team" data-lang-key="team_title">팀</a></li>
         <li><a href="#timeline" data-lang-key="timeline_title">타임라인</a></li>
         <li><a href="#recruit" data-lang-key="recruit_title">모집 안내</a></li>
       </ul>
-      <div class="language-switcher">
-        <button class="lang-btn active" data-lang="ko">한국어</button>
-        <button class="lang-btn" data-lang="en">English</button>
-      </div>
     </nav>
 
     <div class="hero" id="hero">
-      <h1 id="typing-text" data-lang-key="hero_title"></h1>
-      <p data-lang-key="hero_subtitle"></p>
+      <h1 id="typing-text" data-lang-key="hero_title">
+        SAMK에 오신 것을 환영합니다
+      </h1>
+      <p data-lang-key="hero_subtitle">
+        조지메이슨 글로벌캠퍼스에서 시작하세요
+      </p>
     </div>
 
     <div class="section" id="about">
