Changed event name

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
     </div>
 
     <div class="section" id="events">
-      <h2 data-lang-key="events_title">해커톤 정보</h2>
+      <h2 data-lang-key="events_title"> 공모전 </h2>
       <p data-lang-key="events_content">
-        SAMK가 소개하는 외부 해커톤과 대회 정보입니다。
+        SAMK가 추천하는 외부 해커톤과 공모전 대회 정보입니다。
       </p>
       <div class="cards">
         <div class="card">
@@ -99,9 +99,7 @@
             loading="lazy"
           />
           <div class="card-content">
-            <h3 data-lang-key="events_hackathon1_title">
-              🎯 이미지 분류 해커톤
-            </h3>
+            <h3 data-lang-key="events_hackathon1_title">이미지 분류 해커톤</h3>
             <p data-lang-key="events_hackathon1_content">
               데이터 속 아이콘의 종류를 맞혀라!
             </p>
@@ -122,7 +120,7 @@
           />
           <div class="card-content">
             <h3 data-lang-key="events_hackathon2_title">
-              🧠 기업 성공 확률 예측 해커톤
+              기업 성공 확률 예측 해커톤
             </h3>
             <p data-lang-key="events_hackathon2_content">
               미래의 성공기업을 발굴하라!
@@ -170,11 +168,7 @@
       </p>
       <div class="cards">
         <div class="card" onclick="showModal('dif')">
-          <img
-            src="https://images.unsplash.com/photo-1516321310764-2f51c5a64997?q=80&w=2070&auto=format&fit=crop"
-            alt="DIF 팀 이미지"
-            loading="lazy"
-          />
+          <img src="/images/DIF_Team.JPG" alt="DIF 팀 이미지" loading="lazy" />
           <div class="card-content">
             <h3 data-lang-key="team_dif_title">DIF</h3>
             <p data-lang-key="team_dif_content">
@@ -184,11 +178,7 @@
           </div>
         </div>
         <div class="card" onclick="showModal('jun')">
-          <img
-            src="https://images.unsplash.com/photo-1522202176988-66273c2b6a55?q=80&w=2070&auto=format&fit=crop"
-            alt="Jun 팀 이미지"
-            loading="lazy"
-          />
+          <img src="/images/Jun_Team.JPG" alt="Jun 팀 이미지" loading="lazy" />
           <div class="card-content">
             <h3 data-lang-key="team_jun_title">Jun</h3>
             <p data-lang-key="team_jun_content">
@@ -199,7 +189,7 @@
         </div>
         <div class="card" onclick="showModal('sydney')">
           <img
-            src="https://images.unsplash.com/photo-1531482615713-2afd690bf4ae?q=80&w=2070&auto=format&fit=crop"
+            src="/images/Sydney_Team.jpg"
             alt="Sydney 팀 이미지"
             loading="lazy"
           />
@@ -247,8 +237,8 @@
     <div class="section" id="recruit">
       <h2 data-lang-key="recruit_title">모집 안내</h2>
       <p data-lang-key="recruit_content">
-        연 2회 신입 모집 (봄/가을 학기). 자세한 일정은 Instagram 및 공지사항을
-        통해 확인해주세요。
+        가을 학기 모집 예정
+        <br>자세한 일정은 Instagram 및 공지사항을 통해 확인해주세요</br>
       </p>
       <div>
         <a
