해커톤 업데이트

--- a/index.html
+++ b/index.html
@@ -136,16 +136,16 @@
         </div>
         <div class="card">
           <img
-            src="https://static.onoffmix.com/afv2/thumbnail/2025/04/07/v3f8ea1286c8e2010c89b8f5b7886b9e3b.jpg"
-            alt="Snowflake & Streamlit 해커톤 이미지"
+            src="/images/보험연구원.JPG"
+            alt="해커톤 이미지"
             loading="lazy"
           />
           <div class="card-content">
             <h3 data-lang-key="events_hackathon3_title">
-              Snowflake & Streamlit 해커톤
+              보험연구원 온라인 서포터즈 모집
             </h3>
             <p data-lang-key="events_hackathon3_content">
-              데이터로 아이디어를 현실로 만들고 싶다면?
+              보험에 관심이 있다면?
             </p>
             <a
               href="https://onoffmix.com/event/320748"
