인스타,옾챗링크추가, 팀원이름 변경

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       </p>
       <div>
         <a
-          href="https://instagram.com/samk_official"
+          href="https://www.instagram.com/nw_spring/?utm_source=ig_web_button_share_sheet"
           target="_blank"
           class="cta-button"
           data-lang-key="check_instagram"
@@ -273,13 +273,13 @@
           <p>Copyright © SAMK All Rights Reserved.</p>
           <div>
             <a
-              href="https://instagram.com"
+              href="https://www.instagram.com/nw_spring/?utm_source=ig_web_button_share_sheet"
               target="_blank"
               style="color: white; margin-left: 10px; font-size: 20px"
               ><i class="fab fa-instagram"></i
             ></a>
             <a
-              href="https://open.kakao.com"
+              href="https://open.kakao.com/o/ghtIBTsh"
               target="_blank"
               style="color: white; margin-left: 10px; font-size: 20px"
               ><i class="fas fa-comment"></i
@@ -291,7 +291,7 @@
               ><i class="fab fa-github"></i
             ></a>
             <a
-              href="https://youtube.com"
+              href="https://www.youtube.com/@MasonKorea"
               target="_blank"
               style="color: white; margin-left: 10px; font-size: 20px"
               ><i class="fab fa-youtube"></i
