--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
         <div class="card">
           <img
-            src="/images/보험연구원.JPG"
+            src="images/보험연구원.JPG"
             alt="해커톤 이미지"
             loading="lazy"
           />
