--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <h2 data-lang-key="about_title">소개</h2>
       <p data-lang-key="about_content">
         SAMK는 창업과 개발을 사랑하는 학생들이 모여 아이디어를 실현하고 함께
-        성장하는 조지메이슨 글로벌캠퍼스 기반의 동아리입니다。
+        공모전을 나가고 성장하는 조지메이슨 글로벌캠퍼스 기반의 동아리입니다。
       </p>
     </div>
 
