--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
       <div class="cards">
         <div class="card">
           <img
-            src="https://static.onoffmix.com/afv2/thumbnail/2025/03/04/v3246bf2ecf3eec7b93bc9ad98d402b157.png"
+            src="images/블록체인해커톤.jpg"
             alt="이미지 분류 해커톤 이미지"
             loading="lazy"
           />
           <div class="card-content">
-            <h3 data-lang-key="events_hackathon1_title">이미지 분류 해커톤</h3>
+            <h3 data-lang-key="events_hackathon1_title">블록체인&AI 해커톤</h3>
             <p data-lang-key="events_hackathon1_content">
-              데이터 속 아이콘의 종류를 맞혀라!
+              아이디어를 넘어 창업을 꿈꾸다!
             </p>
             <a
               href="https://onoffmix.com/event/318669"
