--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
       <div class="cards">
         <div class="card">
           <img
-            src="images/블록체인해커톤.jpg"
-            alt="이미지 분류 해커톤 이미지"
+            src="https://www.didalliance.org/img/hackathon/2025_hackathon.png"
+            alt="블록체인&AI 해커톤 이미지"
             loading="lazy"
           />
           <div class="card-content">
@@ -136,16 +136,16 @@
         </div>
         <div class="card">
           <img
-            src="images/보험연구원.JPG"
+            src="https://static.onoffmix.com/afv2/attach/2025/05/13/v3c41a9e752e3788dfcd2d1f4e591fedb8.png"
             alt="해커톤 이미지"
             loading="lazy"
           />
           <div class="card-content">
             <h3 data-lang-key="events_hackathon3_title">
-              보험연구원 온라인 서포터즈 모집
+              AI SW 융합 해커톤
             </h3>
             <p data-lang-key="events_hackathon3_content">
-              보험에 관심이 있다면?
+              AI와 SW의 융합으로 새로운 가치를 창출하다!
             </p>
             <a
               href="https://onoffmix.com/event/320748"
@@ -168,7 +168,7 @@
       </p>
       <div class="cards">
         <div class="card" onclick="showModal('dif')">
-          <img src="/images/DIF_Team.JPG" alt="DIF 팀 이미지" loading="lazy" />
+          <img src="https://cdn.getnews.co.kr/news/photo/202504/815298_455170_185.jpg" alt="DIF 팀 이미지" loading="lazy" />
           <div class="card-content">
             <h3 data-lang-key="team_dif_title">DIF</h3>
             <p data-lang-key="team_dif_content">
