이미지 변경

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="cards">
         <div class="card">
           <img
-            src="https://www.didalliance.org/img/hackathon/2025_hackathon.png"
+            src="images/블록체인해커톤.jpg"
             alt="블록체인&AI 해커톤 이미지"
             loading="lazy"
           />
@@ -114,7 +114,7 @@
         </div>
         <div class="card">
           <img
-            src="https://static.onoffmix.com/afv2/thumbnail/2025/04/01/v3165517c876673a2cdb102b7787aa24e4.png"
+            src="images/기업 성공 확률 계산.png"
             alt="기업 성공 확률 예측 해커톤 이미지"
             loading="lazy"
           />
@@ -136,7 +136,7 @@
         </div>
         <div class="card">
           <img
-            src="https://static.onoffmix.com/afv2/attach/2025/05/13/v3c41a9e752e3788dfcd2d1f4e591fedb8.png"
+            src="images/AI SW 융합 해커톤.png"
             alt="해커톤 이미지"
             loading="lazy"
           />
@@ -168,7 +168,7 @@
       </p>
       <div class="cards">
         <div class="card" onclick="showModal('dif')">
-          <img src="https://cdn.getnews.co.kr/news/photo/202504/815298_455170_185.jpg" alt="DIF 팀 이미지" loading="lazy" />
+          <img src="images/DIF Team.JPG" alt="DIF 팀 이미지" loading="lazy" />
           <div class="card-content">
             <h3 data-lang-key="team_dif_title">DIF</h3>
             <p data-lang-key="team_dif_content">
@@ -178,7 +178,7 @@
           </div>
         </div>
         <div class="card" onclick="showModal('jun')">
-          <img src="/images/Jun_Team.JPG" alt="Jun 팀 이미지" loading="lazy" />
+          <img src="images/Jun_Team.JPG" alt="Jun 팀 이미지" loading="lazy" />
           <div class="card-content">
             <h3 data-lang-key="team_jun_title">Jun</h3>
             <p data-lang-key="team_jun_content">
@@ -189,7 +189,7 @@
         </div>
         <div class="card" onclick="showModal('sydney')">
           <img
-            src="/images/Sydney_Team.jpg"
+            src="images/Sydney_Team.jpg"
             alt="Sydney 팀 이미지"
             loading="lazy"
           />
@@ -211,21 +211,21 @@
       </p>
       <div class="timeline">
         <div class="timeline-item">
-          <span data-lang-key="timeline_date1">2024.10</span>
-          <h3 data-lang-key="timeline_event1_title">첫 이미지 분류 해커톤</h3>
+          <span data-lang-key="timeline_date1">2025.06</span>
+          <h3 data-lang-key="timeline_event1_title">서울동행 프로젝트 실시</h3>
           <p data-lang-key="timeline_event1_content">
-            SAMK의 첫 해커톤, 데이터로 세상을 바꾸다!
+            서울시에서 주최하는 프로젝트를 LG헬로비전과 함께 진행합니다.
           </p>
         </div>
         <div class="timeline-item">
-          <span data-lang-key="timeline_date2">2025.03</span>
-          <h3 data-lang-key="timeline_event2_title">창업 세미나</h3>
+          <span data-lang-key="timeline_date2">2025.09</span>
+          <h3 data-lang-key="timeline_event2_title">창업 아카데미 (예정)</h3>
           <p data-lang-key="timeline_event2_content">
             스타트업 전문가와 함께한 아이디어 워크숍
           </p>
         </div>
         <div class="timeline-item">
-          <span data-lang-key="timeline_date3">2025.05</span>
+          <span data-lang-key="timeline_date3">2025.11</span>
           <h3 data-lang-key="timeline_event3_title">AI 워크숍 (예정)</h3>
           <p data-lang-key="timeline_event3_content">
             AI 기술로 미래를 설계하는 실습 워크숍
