--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="cards">
         <div class="card">
           <img
-            src="images/블록체인해커톤.jpg"
+            src="images/blockchain.jpg"
             alt="블록체인&AI 해커톤 이미지"
             loading="lazy"
           />
@@ -114,7 +114,7 @@
         </div>
         <div class="card">
           <img
-            src="images/기업 성공 확률 계산.png"
+            src="images/business.png"
             alt="기업 성공 확률 예측 해커톤 이미지"
             loading="lazy"
           />
@@ -136,7 +136,7 @@
         </div>
         <div class="card">
           <img
-            src="images/AI SW 융합 해커톤.png"
+            src="images/AI_SW.png"
             alt="해커톤 이미지"
             loading="lazy"
           />
