--- a/index.html
+++ b/index.html
@@ -1,65 +1,48 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <!-- 문서 메타데이터 설정 -->
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
-    <meta
-      http-equiv="Cache-Control"
-      content="no-cache, no-store, must-revalidate"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+    <!-- 페이지 제목 및 설명 -->
     <title>SAMK - Start at Mason Korea</title>
-    <meta
-      name="description"
-      content="SAMK는 창업과 개발에 열정을 가진 Mason Korea 학생들이 모인 동아리입니다. 함께 프로젝트를 만들고 세상에 도전하세요."
-    />
+    <meta name="description" content="SAMK는 창업과 개발에 열정을 가진 Mason Korea 학생들이 모인 동아리입니다. 함께 프로젝트를 만들고 세상에 도전하세요." />
+
+    <!-- 오픈그래프 메타 태그로 소셜 미디어 공유 최적화 -->
     <meta property="og:title" content="SAMK - Start at Mason Korea" />
-    <meta
-      property="og:description"
-      content="Mason Korea 학생들의 창업 개발 동아리"
-    />
-    <meta
-      property="og:image"
-      content="https://samk.masonkorea.edu/assets/og-image.jpg"
-    />
+    <meta property="og:description" content="Mason Korea 학생들의 창업 개발 동아리" />
+    <meta property="og:image" content="https://samk.masonkorea.edu/assets/og-image.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://samk.masonkorea.edu" />
-    <link
-      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+
+    <!-- 외부 스타일시트 및 폰트 로드 (성능 최적화를 위해 preload 사용) -->
+    <link rel="preload" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" as="style" />
+    <link href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" rel="stylesheet" />
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" as="style" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/index.css" />
   </head>
   <body>
+    <!-- 내비게이션 바 -->
     <nav>
       <div class="logo"><a href="index.html">SAMK</a></div>
+      <!-- 언어 선택 드롭다운 -->
       <div class="language-switcher">
-        <div class="language-icon">
-          <i class="fas fa-globe"></i>
-        </div>
+        <div class="language-icon"><i class="fas fa-globe"></i></div>
         <div class="language-dropdown">
           <button class="lang-btn" data-lang="ko">한국어</button>
           <button class="lang-btn" data-lang="en">English</button>
         </div>
       </div>
-      <div class="hamburger">
-        <i class="fas fa-bars"></i>
-      </div>
+      <!-- 모바일 메뉴 토글 버튼 -->
+      <div class="hamburger"><i class="fas fa-bars"></i></div>
+      <!-- 내비게이션 링크 -->
       <ul class="nav-links">
         <li><a href="#about" data-lang-key="about_title">소개</a></li>
         <li><a href="#events" data-lang-key="events_title">해커톤 정보</a></li>
@@ -69,196 +52,120 @@
       </ul>
     </nav>
 
+    <!-- 히어로 섹션 -->
     <div class="hero" id="hero">
-      <h1 id="typing-text" data-lang-key="hero_title">
-        SAMK에 오신 것을 환영합니다
-      </h1>
-      <p data-lang-key="hero_subtitle">
-        조지메이슨 글로벌캠퍼스에서 시작하세요
-      </p>
+      <h1 id="typing-text" data-lang-key="hero_title">SAMK에 오신 것을 환영합니다</h1>
+      <p data-lang-key="hero_subtitle">조지메이슨 글로벌캠퍼스에서 시작하세요</p>
     </div>
 
+    <!-- SAMK 동아리 소개 섹션 -->
     <div class="section" id="about">
       <h2 data-lang-key="about_title">소개</h2>
       <p data-lang-key="about_content">
-        SAMK는 창업과 개발을 사랑하는 학생들이 모여 아이디어를 실현하고 함께
-        공모전을 나가고 성장하는 조지메이슨 글로벌캠퍼스 기반의 동아리입니다。
+        SAMK는 창업과 개발을 사랑하는 학생들이 모여 아이디어를 실현하고 함께 공모전을 나가고 성장하는 조지메이슨 글로벌캠퍼스 기반의 동아리입니다。
       </p>
     </div>
 
+    <!-- 해커톤 및 공모전 정보 섹션 -->
     <div class="section" id="events">
-      <h2 data-lang-key="events_title"> 공모전 </h2>
-      <p data-lang-key="events_content">
-        SAMK가 추천하는 외부 해커톤과 공모전 대회 정보입니다。
-      </p>
+      <h2 data-lang-key="events_title">공모전</h2>
+      <p data-lang-key="events_content">SAMK가 추천하는 외부 해커톤과 공모전 대회 정보입니다。</p>
       <div class="cards">
         <div class="card">
-          <img
-            src="images/blockchain.jpg"
-            alt="블록체인&AI 해커톤 이미지"
-            loading="lazy"
-          />
+          <img src="images/SeoulDongHang.jpg" alt="해커톤 이미지" loading="lazy" />
           <div class="card-content">
-            <h3 data-lang-key="events_hackathon1_title">블록체인&AI 해커톤</h3>
-            <p data-lang-key="events_hackathon1_content">
-              아이디어를 넘어 창업을 꿈꾸다!
-            </p>
-            <a
-              href="https://onoffmix.com/event/318669"
-              target="_blank"
-              class="cta-button"
-              data-lang-key="learn_more"
-              >더 알아보기 →</a
-            >
+            <h3 data-lang-key="events_hackathon1_title">서울청년기획봉사단</h3>
+            <p data-lang-key="events_hackathon1_content">함께 성장하는 대학생 봉사 기획</p>
+            <a href="https://www.donghaeng.seoul.kr/news/notice.do?actionID=ACTION_NEWS_NOTICE_DETAIL&search_num=1802" target="_blank" class="cta-button" data-lang-key="learn_more">더 알아보기 →</a>
           </div>
         </div>
         <div class="card">
-          <img
-            src="images/business.png"
-            alt="기업 성공 확률 예측 해커톤 이미지"
-            loading="lazy"
-          />
+          <img src="images/StartUp.JPG" alt="해커톤 이미지" loading="lazy" />
           <div class="card-content">
-            <h3 data-lang-key="events_hackathon2_title">
-              기업 성공 확률 예측 해커톤
-            </h3>
-            <p data-lang-key="events_hackathon2_content">
-              미래의 성공기업을 발굴하라!
-            </p>
-            <a
-              href="https://onoffmix.com/event/320334"
-              target="_blank"
-              class="cta-button"
-              data-lang-key="learn_more"
-              >더 알아보기 →</a
-            >
+            <h3 data-lang-key="events_hackathon2_title">인천 대학연합 창업아카데미</h3>
+            <p data-lang-key="events_hackathon2_content">창업 아이디어 발굴 및 지원</p>
+            <a href="https://www.itp.or.kr/intro.asp?tmid=13&seq=9447" target="_blank" class="cta-button" data-lang-key="learn_more">더 알아보기 →</a>
           </div>
         </div>
         <div class="card">
-          <img
-            src="images/AI_SW.png"
-            alt="해커톤 이미지"
-            loading="lazy"
-          />
+          <img src="images/HanaUni.jpg" alt="해커톤 이미지" loading="lazy" />
           <div class="card-content">
-            <h3 data-lang-key="events_hackathon3_title">
-              AI SW 융합 해커톤
-            </h3>
-            <p data-lang-key="events_hackathon3_content">
-              AI와 SW의 융합으로 새로운 가치를 창출하다!
-            </p>
-            <a
-              href="https://onoffmix.com/event/320748"
-              target="_blank"
-              class="cta-button"
-              data-lang-key="learn_more"
-              >더 알아보기 →</a
-            >
+            <h3 data-lang-key="events_hackathon3_title">하나 소셜벤처 유니버시티</h3>
+            <p data-lang-key="events_hackathon3_content">창업 인재를 발굴/육성하는
+국내 최초의 거점대학 연계형 청년 창업 육성 프로그램</p>
+            <a href="https://www.hanapoweron.com/social/produce" target="_blank" class="cta-button" data-lang-key="learn_more">더 알아보기 →</a>
           </div>
         </div>
       </div>
     </div>
 
+    <!-- 팀 소개 섹션 -->
     <div class="section" id="team">
       <h2 data-lang-key="team_title">팀</h2>
       <p data-lang-key="team_content">
-        SAMK는 다양한 팀 단위로 아이디어를 발전시키고 협업하는 과정을
-        중시합니다. 각 팀은 고유한 주제와 목표를 갖고 독창적인 프로젝트를
-        수행합니다。
+        SAMK는 다양한 팀 단위로 아이디어를 발전시키고 협업하는 과정을 중시합니다. 각 팀은 고유한 주제와 목표를 갖고 독창적인 프로젝트를 수행합니다。
       </p>
       <div class="cards">
         <div class="card" onclick="showModal('dif')">
           <img src="images/DIF Team.JPG" alt="DIF 팀 이미지" loading="lazy" />
           <div class="card-content">
             <h3 data-lang-key="team_dif_title">DIF</h3>
-            <p data-lang-key="team_dif_content">
-              지역사회 문제 해결을 위한 디지털 솔루션을 개발하는 기술 중심
-              팀입니다。
-            </p>
+            <p data-lang-key="team_dif_content">지역사회 문제 해결을 위한 디지털 솔루션을 개발하는 기술 중심 팀입니다。</p>
           </div>
         </div>
         <div class="card" onclick="showModal('jun')">
           <img src="images/Jun_Team.JPG" alt="Jun 팀 이미지" loading="lazy" />
           <div class="card-content">
             <h3 data-lang-key="team_jun_title">Jun</h3>
-            <p data-lang-key="team_jun_content">
-              창의적인 디자인과 사용자 경험을 통해 차별화된 서비스를 구상하는
-              디자인 중심 팀입니다。
-            </p>
+            <p data-lang-key="team_jun_content">창의적인 디자인과 사용자 경험을 통해 차별화된 서비스를 구상하는 디자인 중심 팀입니다。</p>
           </div>
         </div>
         <div class="card" onclick="showModal('sydney')">
-          <img
-            src="images/Sydney_Team.jpg"
-            alt="Sydney 팀 이미지"
-            loading="lazy"
-          />
+          <img src="images/Sydney_Team.jpg" alt="Sydney 팀 이미지" loading="lazy" />
           <div class="card-content">
             <h3 data-lang-key="team_sydney_title">Sydney</h3>
-            <p data-lang-key="team_sydney_content">
-              글로벌 시장을 겨냥한 스타트업 프로젝트를 기획하고 실행하는 글로벌
-              전략 팀입니다。
-            </p>
+            <p data-lang-key="team_sydney_content">글로벌 시장을 겨냥한 스타트업 프로젝트를 기획하고 실행하는 글로벌 전략 팀입니다。</p>
           </div>
         </div>
       </div>
     </div>
 
+    <!-- 타임라인 섹션 -->
     <div class="section" id="timeline">
       <h2 data-lang-key="timeline_title">타임라인</h2>
-      <p data-lang-key="timeline_content">
-        SAMK의 주요 활동을 한눈에 확인하세요。
-      </p>
+      <p data-lang-key="timeline_content">SAMK의 주요 활동을 한눈에 확인하세요。</p>
       <div class="timeline">
         <div class="timeline-item">
           <span data-lang-key="timeline_date1">2025.06</span>
           <h3 data-lang-key="timeline_event1_title">서울동행 프로젝트 실시</h3>
-          <p data-lang-key="timeline_event1_content">
-            서울시에서 주최하는 프로젝트를 LG헬로비전과 함께 진행합니다.
-          </p>
+          <p data-lang-key="timeline_event1_content">서울시에서 주최하는 프로젝트를 LG헬로비전과 함께 진행합니다。</p>
         </div>
         <div class="timeline-item">
           <span data-lang-key="timeline_date2">2025.09</span>
           <h3 data-lang-key="timeline_event2_title">창업 아카데미 (예정)</h3>
-          <p data-lang-key="timeline_event2_content">
-            스타트업 전문가와 함께한 아이디어 워크숍
-          </p>
+          <p data-lang-key="timeline_event2_content">스타트업 전문가와 함께한 아이디어 워크숍</p>
         </div>
         <div class="timeline-item">
           <span data-lang-key="timeline_date3">2025.11</span>
-          <h3 data-lang-key="timeline_event3_title">AI 워크숍 (예정)</h3>
-          <p data-lang-key="timeline_event3_content">
-            AI 기술로 미래를 설계하는 실습 워크숍
-          </p>
+          <h skeptic-lang-key="timeline_event3_title">AI 워크숍 (예정)</h3>
+          <p data-lang-key="timeline_event3_content">AI 기술로 미래를 설계하는 실습 워크숍</p>
         </div>
       </div>
     </div>
 
+    <!-- 모집 안내 섹션 -->
     <div class="section" id="recruit">
       <h2 data-lang-key="recruit_title">모집 안내</h2>
       <p data-lang-key="recruit_content">
-        가을 학기 모집 예정
-        <br>자세한 일정은 Instagram 및 공지사항을 통해 확인해주세요</br>
+        가을 학기 모집 예정<br>자세한 일정은 Instagram 및 공지사항을 통해 확인해주세요</br>
       </p>
       <div>
-        <a
-          href="https://www.instagram.com/nw_spring/?utm_source=ig_web_button_share_sheet"
-          target="_blank"
-          class="cta-button"
-          data-lang-key="check_instagram"
-          >Instagram에서 확인하기</a
-        >
-        <a
-          href="https://samk.masonkorea.edu/apply"
-          target="_blank"
-          class="cta-button"
-          style="margin-left: 20px"
-          data-lang-key="apply_now"
-          >지금 지원하기</a
-        >
+        <a href="https://www.instagram.com/nw_spring/?utm_source=ig_web_button_share_sheet" target="_blank" class="cta-button" data-lang-key="check_instagram">Instagram에서 확인하기</a>
+        <a href="https://samk.masonkorea.edu/apply" target="_blank" class="cta-button" style="margin-left: 20px" data-lang-key="apply_now">지금 지원하기</a>
       </div>
     </div>
 
+    <!-- 팀 모달 팝업 -->
     <div class="modal" id="team-modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal()">×</span>
@@ -267,47 +174,25 @@
       </div>
     </div>
 
+    <!-- 푸터 섹션 -->
     <footer>
       <div class="container">
         <div class="top">
           <p>Copyright © SAMK All Rights Reserved.</p>
+          <!-- 소셜 미디어 링크 -->
           <div>
-            <a
-              href="https://www.instagram.com/nw_spring/?utm_source=ig_web_button_share_sheet"
-              target="_blank"
-              style="color: white; margin-left: 10px; font-size: 20px"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a
-              href="https://open.kakao.com/o/ghtIBTsh"
-              target="_blank"
-              style="color: white; margin-left: 10px; font-size: 20px"
-              ><i class="fas fa-comment"></i
-            ></a>
-            <a
-              href="https://github.com"
-              target="_blank"
-              style="color: white; margin-left: 10px; font-size: 20px"
-              ><i class="fab fa-github"></i
-            ></a>
-            <a
-              href="https://www.youtube.com/@MasonKorea"
-              target="_blank"
-              style="color: white; margin-left: 10px; font-size: 20px"
-              ><i class="fab fa-youtube"></i
-            ></a>
+            <a href="https://www.instagram.com/nw_spring/?utm_source=ig_web_button_share_sheet" target="_blank" style="color: white; margin-left: 10px; font-size: 20px"><i class="fab fa-instagram"></i></a>
+            <a href="https://open.kakao.com/o/ghtIBTsh" target="_blank" style="color: white; margin-left: 10px; font-size: 20px"><i class="fas fa-comment"></i></a>
+            <a href="https://github.com" target="_blank" style="color: white; margin-left: 10px; font-size: 20px"><i class="fab fa-github"></i></a>
+            <a href="https://www.youtube.com/@MasonKorea" target="_blank" style="color: white; margin-left: 10px; font-size: 20px"><i class="fab fa-youtube"></i></a>
           </div>
         </div>
         <hr />
         <div class="bottom">
           <div>
-            <p style="font-weight: bold; font-size: 18px; margin: 0 0 10px">
-              Made with by SAMK
-            </p>
+            <p style="font-weight: bold; font-size: 18px; margin: 0 0 10px">Made with by SAMK</p>
             <p>2025 Ver. Created by <strong>SAMK</strong></p>
-            <p>
-              경기도 인천시 연수구 송도문화로 119, 조지메이슨대학교 글로벌캠퍼스
-            </p>
+            <멈>경기도 인천시 연수구 송도문화로 119, 조지메이슨대학교 글로벌캠퍼스</p>
             <p>spark279@gmu.edu</p>
           </div>
           <div class="right">
@@ -320,6 +205,7 @@
       </div>
     </footer>
 
-    <script src="assets/js/index.js"></script>
+    <!-- 자바스크립트 파일 로드 -->
+    <script src="assets/js/index.js" defer></script>
   </body>
 </html>
