--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
           <img src="images/HanaUni.jpg" alt="해커톤 이미지" loading="lazy" />
           <div class="card-content">
             <h3 data-lang-key="events_hackathon3_title">하나 소셜벤처 유니버시티</h3>
-            <p data-lang-key="events_hackathon3_content">창업 인재를 발굴/육성하는
-국내 최초의 거점대학 연계형 청년 창업 육성 프로그램</p>
+            <p data-lang-key="events_hackathon3_content">창업 인재를 발굴/육성하는 국내 최초의 거점대학 연계형 청년 창업 육성 프로그램</p>
             <a href="https://www.hanapoweron.com/social/produce" target="_blank" class="cta-button" data-lang-key="learn_more">더 알아보기 →</a>
           </div>
         </div>
@@ -141,13 +140,13 @@
           <p data-lang-key="timeline_event1_content">서울시에서 주최하는 프로젝트를 LG헬로비전과 함께 진행합니다。</p>
         </div>
         <div class="timeline-item">
-          <span data-lang-key="timeline_date2">2025.09</span>
-          <h3 data-lang-key="timeline_event2_title">창업 아카데미 (예정)</h3>
-          <p data-lang-key="timeline_event2_content">스타트업 전문가와 함께한 아이디어 워크숍</p>
+          <span data-lang-key="timeline_date2">2025.07</span>
+          <h3 data-lang-key="timeline_event2_title">인천 대학연합 창업아카데미</h3>
+          <p data-lang-key="timeline_event2_content">인천시에서 청년 창업 아이디어를 발전 & 지원 합니다。</p>
         </div>
         <div class="timeline-item">
           <span data-lang-key="timeline_date3">2025.11</span>
-          <h skeptic-lang-key="timeline_event3_title">AI 워크숍 (예정)</h3>
+          <h3 data-lang-key="timeline_event3_title">AI 워크숍 (예정)</h3>
           <p data-lang-key="timeline_event3_content">AI 기술로 미래를 설계하는 실습 워크숍</p>
         </div>
       </div>
@@ -178,7 +177,7 @@
     <footer>
       <div class="container">
         <div class="top">
-          <p>Copyright © SAMK All Rights Reserved.</p>
+          <p data-lang-key="footer_copyright">Copyright © SAMK All Rights Reserved.</p>
           <!-- 소셜 미디어 링크 -->
           <div>
             <a href="https://www.instagram.com/nw_spring/?utm_source=ig_web_button_share_sheet" target="_blank" style="color: white; margin-left: 10px; font-size: 20px"><i class="fab fa-instagram"></i></a>
@@ -190,16 +189,16 @@
         <hr />
         <div class="bottom">
           <div>
-            <p style="font-weight: bold; font-size: 18px; margin: 0 0 10px">Made with by SAMK</p>
-            <p>2025 Ver. Created by <strong>SAMK</strong></p>
-            <멈>경기도 인천시 연수구 송도문화로 119, 조지메이슨대학교 글로벌캠퍼스</p>
-            <p>spark279@gmu.edu</p>
+            <p style="font-weight: bold; font-size: 18px; margin: 0 0 10px" data-lang-key="footer_made_by">Made with by SAMK</p>
+            <p data-lang-key="footer_version">2025 Ver. Created by <strong>SAMK</strong></p>
+            <p data-lang-key="footer_address">경기도 인천시 연수구 송도문화로 119, 조지메이슨대학교 글로벌캠퍼스</p>
+            <p data-lang-key="footer_email">spark279@gmu.edu</p>
           </div>
           <div class="right">
-            <p style="font-weight: bold">회장</p>
-            <p>박새봄 010-9454-0836</p>
-            <p style="font-weight: bold">부회장</p>
-            <p>하태준 010-4775-7419</p>
+            <p style="font-weight: bold" data-lang-key="footer_president_label">회장</p>
+            <p data-lang-key="footer_president">박새봄 010-9454-0836</p>
+            <p style="font-weight: bold" data-lang-key="footer_vice_president_label">부회장</p>
+            <p data-lang-key="footer_vice_president">하태준 010-4775-7419</p>
           </div>
         </div>
       </div>
