--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <!-- 해커톤 및 공모전 정보 섹션 -->
     <div class="section" id="events">
-      <h2 data-lang-key="events_title">공모전</h2>
+      <h2 data-lang-key="events_title">고옹모전</h2>
       <p data-lang-key="events_content">SAMK가 추천하는 외부 해커톤과 공모전 대회 정보입니다。</p>
       <div class="cards">
         <div class="card">
